--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دامنه بفروش میرسد به من پیام دهید به شما اطلاع میدهم</title>
+    <title>فروش دامنه</title>
     <style>
         /* Reset and base styles */
         * {
@@ -193,7 +193,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 data-fa=فرم تماس با ما" data-en="Contact Us Form">فرم تماس با ما</h1>
+        <h1 data-fa="فرم تماس با ما" data-en="Contact Us Form">فرم تماس با ما</h1>
 
         <form id="contactform">
             <div class="form-row">
@@ -312,6 +312,3 @@
     </script>
 </body>
 </html>
-
-
-
