--- a/index.html
+++ b/index.html
@@ -193,17 +193,12 @@
 </head>
 <body>
     <div class="container">
-        <h1 data-fa="فرم تماس با ما" data-en="Contact Us Form">فرم تماس با ما</h1>
-
-        <form id="contactform">
+          
+<h1 data-fa="فروش دامنه" data-en="Contact Us Form">فرم تماس با ما</h1>
+ <form id="contactform">
             <div class="form-row">
                 <label for="name" data-fa="نام و نام خانوادگی:" data-en="Full Name:">نام و نام خانوادگی:</label>
                 <input type="text" id="name" name="name" required>
-            </div>
-
-            <div class="form-row">
-                <label for="account" data-fa="شماره حساب متاتریدر:" data-en="MetaTrader Account Number:">شماره حساب متاتریدر:</label>
-                <input type="number" id="account" name="account" required>
             </div>
 
             <div class="form-row">
@@ -218,9 +213,6 @@
 
             <button type="submit" data-fa="ارسال پیام" data-en="Send Message">ارسال پیام</button>
         </form>
-
-        <a href="index.html" class="back-button" data-fa="بازگشت به صفحه اصلی" data-en="Back to Main Page">بازگشت به صفحه اصلی</a>
-    </div>
 
     <div id="result"></div>
 
