--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             submitBtn.textContent = currentLang === 'fa' ? 'در حال ارسال...' : 'Sending...';
 
             const formData = new FormData(e.target);
-            const workerUrl = `https://contact.mql5expert.ir/process?lang=${currentLang}`; // Updated Worker URL
+            const workerUrl = 'https://contact.click4tell.workers.dev/process?lang=${currentLang}`; // Updated Worker URL
 
             try {
                 const response = await fetch(workerUrl, {
@@ -304,3 +304,4 @@
     </script>
 </body>
 </html>
+
