--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>فروش دامنه</title>
+    <title>فرم تماس با ما</title>
     <style>
         /* Reset and base styles */
         * {
@@ -193,12 +193,17 @@
 </head>
 <body>
     <div class="container">
-          
-<h1 data-fa="فروش دامنه" data-en="Contact Us Form">فرم تماس با ما</h1>
- <form id="contactform">
+        <h1 data-fa="اگر تمایل به خرید این دامنه دارید پیام بگذارید" data-en="Contact Us Form">فرم تماس با ما</h1>
+
+        <form id="contactform">
             <div class="form-row">
                 <label for="name" data-fa="نام و نام خانوادگی:" data-en="Full Name:">نام و نام خانوادگی:</label>
                 <input type="text" id="name" name="name" required>
+            </div>
+
+            <div class="form-row">
+                <label for="account" data-fa="شماره تماس" data-en="MetaTrader Account Number:">شماره تماس</label>
+                <input type="number" id="account" name="account" required>
             </div>
 
             <div class="form-row">
@@ -213,6 +218,9 @@
 
             <button type="submit" data-fa="ارسال پیام" data-en="Send Message">ارسال پیام</button>
         </form>
+
+        <a href="index.html" class="back-button" data-fa="بازگشت به صفحه اصلی" data-en="Back to Main Page">بازگشت به صفحه اصلی</a>
+    </div>
 
     <div id="result"></div>
 
@@ -263,7 +271,7 @@
             submitBtn.textContent = currentLang === 'fa' ? 'در حال ارسال...' : 'Sending...';
 
             const formData = new FormData(e.target);
-            const workerUrl = 'https://contact.click4tell.workers.dev/process?lang=${currentLang}`; // Updated Worker URL
+            const workerUrl = `https://contact.click4tell.workers.dev/process?lang=${currentLang}`; // Updated Worker URL
 
             try {
                 const response = await fetch(workerUrl, {
